# newspaper

./: LICENSE  README.md  main.py  preferences.yml  pyproject.toml  template.html
