[tool.poetry]
name = "hackernewspaper"
version = "0.1.0"
description = ""
authors = ["Alessandro Dal Grande <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
openai = "^0.27.0"
tiktoken = "^0.4.0"
jinja2 = "^3.0.1"
pyyaml = "^5.4.1"
tqdm = "^4.61.2"
beautifulsoup4 = "^4.9.3"
newspaper3k = "^0.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
